<resources>
    <string name="app_name">NyMovies</string>
    <string name="app_title">NyMovies</string>
    <string name="app_icon_description">Иконка приложения</string>
    <string name="movie_image">Плакат фильма</string>
    <string name="star_image">Рейтинг</string>
    <string name="critics_image_description">Выбрали критики</string>
    <string name="try_again">Попробуйте еще раз</string>
    <string name="server_error_pic">Ошибка сети</string>
    <string name="no_internet_title">Нет соединения с сетью :(</string>
    <string name="no_network">Нет сети!</string>
    <string name="unknown_exception">Неизвестная ошибка</string>
</resources>